# fut_scrap

./: README.md  fix.py  func.py  main.py  main20.py  main21.py  main22.py  partidas.csv  pyproject.toml  rasp.py  test.py
fut_scrap/: fix.py  func.py  main.py
output/: partidas.csv  partidas_20.csv  partidas_21.csv  partidas_22.csv  partidas_23.csv
