[tool.poetry]
name = "fut-scrap"
version = "0.1.0"
description = "This project scrap soccer data from optaplayerstats.statsperform.com"
authors = ["lucasbral <lucasdecarvalhosobral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.26.1"
tqdm = "^4.66.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
